--- a/debian/rules
+++ b/debian/rules
@@ -10,3 +10,6 @@ include /usr/share/dpkg/default.mk
 # main packaging script based on dh7 syntax
 %:
 	dh $@ --with autoreconf --builddirectory=build --parallel
+
+override_dh_builddeb:
+	dh_builddeb -- -Zgzip
